# fastmlx

./: .gitignore  AGENTS.md  AGENT_SCRATCHPAD.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: amp_benchmark.py
fastmlx/: __init__.py  display.py  estimator.py  network.py  pipeline.py  schedule.py  util.py
fastmlx/apphub/: __init__.py  anomaly_detection.py  autoencoder_mnist.py  cifar10.py  conditional_gan.py  curriculum_learning.py  cutmix_training.py  dcgan_mnist.py  early_stopping.py  fashion_mnist.py  fgsm_adversarial.py  focal_loss_imbalanced.py  gpt_language_model.py  gradient_accumulation.py  gradient_clipping.py  knowledge_distillation.py  label_smoothing.py  lr_finder.py  mixup_training.py  mnist.py  model_ensemble.py  multitask_learning.py  progressive_resizing.py  pseudo_labeling.py  siamese_mnist.py  simclr_cifar10.py  stochastic_weight_averaging.py  super_convergence.py  tabular_dnn.py  time_series_forecasting.py  transfer_learning.py  triplet_loss.py  unet_segmentation.py  vit_cifar10.py  wideresnet_cifar10.py
fastmlx/architecture/: __init__.py  autoencoder.py  gan.py  lenet.py  resnet9.py  siamese.py  transformer.py  unet.py  wideresnet.py
fastmlx/backend/: __init__.py  amp.py  device.py  dtype.py  memory.py  seed.py  summary.py
fastmlx/dataset/: __init__.py  csv_dataset.py  dir_dataset.py  generator_dataset.py  mlx_dataset.py  nlp_dataset.py  numpy_dataset.py  siamese_dataset.py  timeseries_dataset.py
fastmlx/fastmlx/: __init__.py  estimator.py  network.py  pipeline.py  schedule.py  util.py
tests/: conftest.py  test_architecture.py  test_backend.py  test_dataset.py  test_display.py  test_estimator.py  test_lenet.py  test_mnist_data.py  test_mnist_estimator.py  test_mnist_training.py  test_network.py  test_new_components.py  test_ops_augmentation.py  test_ops_loss.py  test_ops_preprocessing.py  test_pipeline.py  test_schedule.py  test_schedule_full.py  test_search.py  test_summary.py  test_traces.py
(+98 files in other folders)
